LPS-65912 - Correct icon contrast

--- a/modules/private/apps/web-experience/product-navigation/product-navigation-control-menu-dxp-theme-contributor/src/main/resources/META-INF/resources/control_menu/_add_panel.scss
+++ b/modules/private/apps/web-experience/product-navigation/product-navigation-control-menu-dxp-theme-contributor/src/main/resources/META-INF/resources/control_menu/_add_panel.scss
@@ -53,6 +53,7 @@ body.open-admin-panel, body.sidenav-transition {
 
 		.icon {
 			background-color: $control-menu-level-2-bg;
+			color: $control-menu-level-2-color;
 		}
 	}
 
